--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -924,7 +924,7 @@ SIRE/CID experience
 
             // Parse the JSON string
             const values = JSON.parse(decodedValues);
-
+          console.log(values)
             // Log the decoded values in a readable format
             console.log('Decoded values from URL:', JSON.stringify(values, null, 2));
 
