--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -115,36 +115,36 @@
         <form id="evaluationForm">
             <div class="form-group">
                 <label for="fullName">Family Name & Given Name</label>
-                <input type="text" disabled class="form-control" id="fullName" placeholder="Enter your full name">
+                <input type="text" disabled class="form-control" id="fullName" >
             </div>
 
             <div class="form-row mb-3">
                 <div class="form-group col-md-4">
                     <label for="rankApplied">RANK APPLIED</label>
-                    <input type="text" disabled class="form-control" id="rankApplied" placeholder="Enter rank applied">
+                    <input type="text" disabled class="form-control" id="rankApplied" >
                 </div>
                 <div class="form-group col-md-4">
                     <label for="nationality">Nationality</label>
-                    <input type="text" disabled class="form-control" id="nationality" placeholder="Enter nationality">
+                    <input type="text" disabled class="form-control" id="nationality" >
                 </div>
                 <div class="form-group col-md-4">
                     <label for="telephone">Telephone No.</label>
-                    <input type="tel" disabled class="form-control" id="telephone" placeholder="Enter telephone number">
+                    <input type="tel" disabled class="form-control" id="telephone" >
                 </div>
             </div>
 
             <div class="form-row mb-3">
                 <div class="form-group col-md-4">
                     <label for="mobile">Mobile Ph.</label>
-                    <input type="tel" disabled class="form-control" id="mobile" placeholder="Enter mobile phone number">
+                    <input type="tel" disabled class="form-control" id="mobile" >
                 </div>
                 <div class="form-group col-md-4">
                     <label for="qualification">Qualification</label>
-                    <input type="text" disabled class="form-control" id="qualification" placeholder="Enter qualification">
+                    <input type="text" disabled class="form-control" id="qualification" >
                 </div>
                 <div class="form-group col-md-4">
                     <label for="lastContract">Last Contract Position</label>
-                    <input type="text" disabled class="form-control" id="lastContract" placeholder="Enter last contract position">
+                    <input type="text" disabled class="form-control" id="lastContract" >
                 </div>
             </div>
 
@@ -793,7 +793,7 @@ SIRE/CID experience
               <input
                 type="text"
                 disabled
-                placeholder="Enter reason for leaving"
+               
                 class="w-full p-2 border rounded"
                 id="leavingLast"
               />
@@ -836,13 +836,13 @@ SIRE/CID experience
                 type="text"
                 class="form-control"
                 disabled
-                placeholder="INTERVIEWER NAME"
+            
                 id="intName"
               />
             </div>
             <div class="col-md-4 mb-3">
               <small class="p-2">SIGNATURE:</small>
-              <input type="text" disabled class="form-control" placeholder="SIGNATURE" id="signNow"/>
+              <input type="text" disabled class="form-control"  id="signNow"/>
             </div>
             <div class="col-md-4 mb-3">
               <small class="d-block">DATE:</small>
